--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "dist": "^0.1.2",
     "pinia": "^2.0.32",
     "uglify-js": "^3.17.4",
+    "vee-validate": "^4.8.6",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
@@ -24,6 +26,7 @@
     "eslint": "^8.34.0",
     "eslint-plugin-vue": "^9.9.0",
     "prettier": "^2.8.4",
+    "sass": "^1.62.0",
     "vite": "^4.1.4"
   }
 }
