--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "dist": "^0.1.2",
+    "firebase": "^9.20.0",
     "pinia": "^2.0.32",
     "uglify-js": "^3.17.4",
     "vee-validate": "^4.8.6",
